infra/kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-core-web
  namespace: bateriaexpert
  labels:
    app.kubernetes.io/name: erp-core-web
    app.kubernetes.io/part-of: bateriaexpert
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: erp-core-web
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: ms-001-fiscal-api
  namespace: bateriaexpert
  labels:
    app.kubernetes.io/name: ms-001-fiscal-api
    app.kubernetes.io/part-of: bateriaexpert
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ms-001-fiscal-api
  ports:
    - name: http
      port: 8001
      targetPort: 8001
    - name: metrics
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: ms-002-banking-api
  namespace: bateriaexpert
  labels:
    app.kubernetes.io/name: ms-002-banking-api
    app.kubernetes.io/part-of: bateriaexpert
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ms-002-banking-api
  ports:
    - name: http
      port: 8002
      targetPort: 8002
    - name: metrics
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: ms-003-notification-api
  namespace: bateriaexpert
  labels:
    app.kubernetes.io/name: ms-003-notification-api
    app.kubernetes.io/part-of: bateriaexpert
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ms-003-notification-api
  ports:
    - name: http
      port: 8003
      targetPort: 8003
    - name: metrics
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: ms-004-openfinance-api
  namespace: bateriaexpert
  labels:
    app.kubernetes.io/name: ms-004-openfinance-api
    app.kubernetes.io/part-of: bateriaexpert
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ms-004-openfinance-api
  ports:
    - name: http
      port: 8004
      targetPort: 8004
    - name: metrics
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: ms-005-geocoding-api
  namespace: bateriaexpert
  labels:
    app.kubernetes.io/name: ms-005-geocoding-api
    app.kubernetes.io/part-of: bateriaexpert
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ms-005-geocoding-api
  ports:
    - name: http
      port: 8005
      targetPort: 8005
    - name: metrics
      port: 9090
      targetPort: 9090
